@@ -5,3 +5,4 @@
 <Alt>n=next
 <Alt>p=prev
 <Alt>c=close
+<Alt>return=fullscreen
