@@ -1,3 +1,6 @@
+* Fullscreen support (hide toolbar and tray) and tray support in activity 
+window (erikos)
+
 Snapshot 276e1ee517
 
 * #4266 Avoid misleading warning every time an activity starts (smcv)
